# whatsapp-mcp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  migrate_jids.py  start.sh
.github/workflows/: gitleaks.yml
whatsapp-bridge/: go.mod  go.sum  main.go
whatsapp-mcp-server/: main.py  pyproject.toml  whatsapp.py
whatsapp-mcp-server/tests/: __init__.py  test_format.py  test_send_message.py
whatsapp-mcp-server/whatsapp_mcp_server/: __init__.py  audio.py  whatsapp.py
