[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "WhatsApp MCP server and Python library for reading/sending WhatsApp messages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
